# opc-ua-project

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  opc-ua-project.cpp  server.cpp
